--- a/train.ipynb
+++ b/train.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -230,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -244,12 +244,20 @@
     "    time_to_model = {}\n",
     "    for game in train_x:\n",
     "        for key in game.keys():\n",
+    "            training_key = key\n",
+    "            \n",
+    "            if training_key < 0:\n",
+    "                for ot in range(1,10):\n",
+    "                    if (ot*5*60)+training_key > 0:\n",
+    "                        training_key = (ot*5*60)+training_key\n",
+    "                        break\n",
+    "            \n",
     "            if key in time_to_train_x:\n",
-    "                time_to_train_x[key].append([game[key][0], game[key][2]])\n",
-    "                time_to_train_y[key].append(game[key][1])\n",
+    "                time_to_train_x[training_key].append([game[key][0], game[key][2]])\n",
+    "                time_to_train_y[training_key].append(game[key][1])\n",
     "            else:\n",
-    "                time_to_train_x[key] = [[game[key][0], game[key][2]]]\n",
-    "                time_to_train_y[key] = [game[key][1]]\n",
+    "                time_to_train_x[training_key] = [[game[key][0], game[key][2]]]\n",
+    "                time_to_train_y[training_key] = [game[key][1]]\n",
     "                \n",
     "    for key in time_to_train_x.keys():\n",
     "        model = linear_model.LogisticRegression(max_iter=10000, solver='lbfgs')\n",
@@ -260,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -272,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -282,6 +290,13 @@
     "with open('model.pickle', 'wb') as handle:\n",
     "    pickle.dump(time_to_model, handle, protocol=pickle.HIGHEST_PROTOCOL)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
