--- a/new.ipynb
+++ b/new.ipynb
@@ -18,12 +18,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
-    "from py_ball import winprobability, constants"
+    "from py_ball import winprobability, constants\n",
+    "import time\n",
+    "import statistics"
    ]
   },
   {
@@ -203,6 +205,111 @@
    "source": [
     "wp.brier_score()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Evaluate for the 2018-19 Season\n",
+    "\n",
+    "Here, we get all the game ids for the 2018-19 regular season "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"\n",
+    "Given the total number of games in a season, we generate the game_ids\n",
+    "\"\"\"\n",
+    "def get_game_ids(years, total_games_per_year=1230):\n",
+    "    game_ids = []\n",
+    "    for year in years:\n",
+    "        for game in range(1, total_games_per_year+1):\n",
+    "            maybe = '002%s' + str(game).zfill(5)\n",
+    "            game_ids.append(maybe % year)\n",
+    "    return game_ids"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gids = get_game_ids([\"18\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "scores = []"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for index, game_id in enumerate(gids):\n",
+    "    wp = winprobability.WinProbability(game_id=game_id, headers=constants.headers)\n",
+    "    brier_score = wp.brier_score()\n",
+    "    scores.append(brier_score)\n",
+    "    time.sleep(3.0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1230"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(scores)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.16734609179405868"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "statistics.mean(scores)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
